# libgpiod-android

./: .gitignore  Android.bp  CMakeLists.txt  Makefile.am  NEWS  configure.ac
bindings/csharp/: CMakeLists.txt  gpiod.i  gpiodWrapper.c  gpiodWrapper.h  gpiodcxxCSHARP_wrap.cxx  gpiodroid.cs
bindings/cxx/: CMakeLists.txt  gpiod.hpp  gpiodcxx.i  gpiodroid.i  line.cpp
bindings/cxx/gpiodcxx/: chip.hpp  timestamp.hpp
bindings/python/: gpiodmodule.c
bindings/python/examples/: gpiod_tests.py
include/: gpiod.h
lib/: core.c  misc.c
src/lib/: Makefile.am  core.c
src/tools/: Makefile.am  gpiodetect.c  gpiofind.c  gpioget.c  gpioinfo.c  gpiomon.c  gpioset.c  tools-common.c  tools-common.h
tests/: Makefile.am  gpiod-test.c  gpiod-test.h  tests-chip.c  tests-event.c  tests-gpiodetect.c  tests-gpiofind.c  tests-gpioget.c  tests-gpioinfo.c  tests-gpiomon.c  tests-gpioset.c  tests-iter.c  tests-line.c  tests-misc.c  tests-simple-api.c
tests/mockup/: gpio-mockup.c
tools/: tools-common.c  tools-common.h
